--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,12 @@
 .editArea {
   display: flex;
   justify-content: center;
+  margin-top: 60px;
 }
 
 .slateBlocks {
   width: 50%;
+  color: rgb(90, 90, 90);
 }
 
 .slate {
@@ -15,20 +17,31 @@
 }
 
 .editable {
-  width: 95%;
+  width: 92%;
+  line-height: 25px;
 }
 
-.switch {
+.slate .block-button {
   visibility: visible;
   width: auto;
   border: none;
   background-color: white;
   color: gray;
-  border-radius: 1px;
+  border-radius: 2px;
   font-size: 20px;
   cursor: pointer;
 }
 
-.switch:hover {
+.slate .block-button:hover {
   background-color: rgb(223, 223, 223);
+}
+
+#toggle-bar {
+  visibility: hidden;
+  position: absolute;
+  z-index: 9999;
+  box-shadow: 3px 5px 10px rgb(0 0 0 / 15%);
+  opacity: 0.9;
+  background-color: white;
+  transition: visibility 0.3s ease-in;
 }
