--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-.editArea {
+#editArea {
   display: flex;
   justify-content: center;
   margin-top: 60px;
@@ -21,6 +21,11 @@
   line-height: 25px;
 }
 
+::selection {
+  color: #fff;
+  background-color: mediumaquamarine;
+}
+
 .slate .block-button {
   visibility: visible;
   width: auto;
@@ -37,11 +42,10 @@
 }
 
 #toggle-bar {
-  visibility: hidden;
   position: absolute;
   z-index: 9999;
-  box-shadow: 3px 5px 10px rgb(0 0 0 / 15%);
-  opacity: 0.9;
+  box-shadow: 3px 5px 10px rgb(0 0 0 / 20%);
+  opacity: 0.95;
   background-color: white;
   transition: visibility 0.3s ease-in;
 }
